Updated thumbnail and description

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Betser - Bet your friends</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <meta name="description" content="Betser - Bet your friends" />
     <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image" content="/better-thumbnail.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
